--- a/appendix.tex
+++ b/appendix.tex
@@ -1,4 +1,4 @@
-\chapter{Source code of programs used in experiments}
+\chapter{Source code of programs used in experiments}\label{appendixa}
 
 \section{Single source shortest paths}
 \begin{Verbatim}[label=Shortest paths - SparkDatalog]
